stop minibar from flickering on hover in OLD safari, ffs

--- a/public/js/views/menu/room/minibar/minibar-view.less
+++ b/public/js/views/menu/room/minibar/minibar-view.less
@@ -43,6 +43,7 @@
     height:     100%;
     background: @menu-panel-bg;
     opacity:    .3;
+    transform:  translate3d(0, 0, 0);
   }
 }
 
